Repair broken css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,142 +1,1 @@
-*,
-*::after,
-*::before {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "League Spartan", sans-serif;
-}
-
-main .buttons, main header .themeSelect .theme-option, main header .themeSelect .theme-options, main header .themeSelect, main header, main, body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-body {
-  min-height: 100vh;
-  padding: 30px;
-  background-color: var(--main-background);
-}
-
-main {
-  flex-direction: column;
-  gap: 20px;
-  max-width: 768px;
-  width: 100%;
-}
-main header {
-  width: 100%;
-  justify-content: space-between;
-  padding: 2px;
-  color: var(--text-color);
-}
-main header h1 {
-  font-size: 1.5em;
-}
-main header .themeSelect {
-  font-size: 0.8em;
-  font-weight: bold;
-  gap: 20px;
-  align-items: flex-end;
-}
-main header .themeSelect .theme-options {
-  gap: 4px;
-  padding: 4px;
-  border-radius: 20px;
-  background-color: var(--toggle-background);
-}
-main header .themeSelect .theme-option {
-  position: relative;
-  width: max-content;
-  flex-direction: column;
-}
-main header .themeSelect .theme-option label {
-  position: absolute;
-  font-size: 1em;
-  top: -150%;
-}
-main header .themeSelect .theme-option input[type=button] {
-  width: 15px;
-  height: 15px;
-  border: none;
-  outline: none;
-  border-radius: 50%;
-  background-color: transparent;
-}
-main header .themeSelect .theme-option input[name=theme].active {
-  background-color: var(--key-bg-toggle);
-}
-main #output {
-  display: block;
-  width: 100%;
-  padding: 20px;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: right;
-  border-radius: 10px;
-  color: var(--text-color);
-  background: var(--screen-background);
-  overflow: auto;
-}
-main .buttons {
-  width: 100%;
-  padding: 20px;
-  border-radius: 8px;
-  flex-direction: column;
-  background-color: var(--toggle-background);
-}
-main .buttons .chars {
-  width: 100%;
-  height: auto;
-padding: 0px;
-  display: grid;
-  justify-content: baseline;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 20px;
-}
-main .buttons .action {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  margin: 14px;
-  margin-bottom: 0;
-  gap: 14px;
-}
-
-button {
-  width: 100%;
-	padding: 20px;
-  font-weight: bold;
-  font-size: 3em;
-  border-radius: 10px;
-  outline: none;
-  border: none;
-  color: var(--text-color);
-  box-shadow: 0px 4px var(--key-shadow-main);
-  background-color: var(--key-bg-main);
-}
-button:hover {
-  background-color: var(--text-color-2);
-}
-
-.btn {
-  padding: 15px 10px;
-  font-size: 1em;
-  color: var(--text-color-2);
-  box-shadow: 0px 4px var(--key-shadow);
-  background-color: var(--key-background);
-}
-.btn:hover {
-  opacity: 0.8;
-  background-color: var(--key-background);
-}
-
-.calculate.btn {
-  box-shadow: 0px 4px var(--key-shadow-r-btn);
-  background-color: var(--key-bg-toggle);
-}
-
-/*# sourceMappingURL=styles.css.map */
+*,*::after,*::before{padding:0;margin:0;box-sizing:border-box;font-family:"League Spartan",sans-serif}main .buttons,main header .themeSelect .theme-option,main header .themeSelect .theme-options,main header .themeSelect,main header,main,body{display:flex;align-items:center;justify-content:center}body{min-height:100vh;padding:30px;background-color:var(--main-background)}main{flex-direction:column;gap:20px;max-width:400px;width:100%}main header{width:100%;justify-content:space-between;padding:2px;color:var(--text-color)}main header h1{font-size:1.5em}main header .themeSelect{font-size:.8em;font-weight:bold;gap:20px;align-items:flex-end}main header .themeSelect .theme-options{gap:4px;padding:4px;border-radius:20px;background-color:var(--toggle-background)}main header .themeSelect .theme-option{position:relative;width:max-content;flex-direction:column}main header .themeSelect .theme-option label{position:absolute;font-size:1em;top:-150%}main header .themeSelect .theme-option input[type=button]{width:15px;height:15px;border:none;outline:none;border-radius:50%;background-color:rgba(0,0,0,0)}main header .themeSelect .theme-option input[name=theme].active{background-color:var(--key-bg-toggle)}main #output{display:block;width:100%;padding:15px;font-weight:bold;font-size:2.5em;text-align:right;border-radius:10px;color:var(--text-color);background:var(--screen-background);overflow:auto}main .buttons{width:100%;padding:20px;border-radius:8px;flex-direction:column;background-color:var(--toggle-background)}main .buttons .chars{width:100%;display:grid;justify-content:baseline;grid-template-columns:repeat(4, 1fr);grid-template-rows:repeat(4, 1fr);gap:14px}main .buttons .action{width:100%;display:grid;grid-template-columns:repeat(2, 1fr);grid-template-rows:repeat(1, 1fr);margin:14px;margin-bottom:0;gap:14px}button{font-weight:bold;font-size:2em;border-radius:5px;outline:none;border:none;color:var(--text-color);box-shadow:0px 4px var(--key-shadow-main);background-color:var(--key-bg-main)}button:hover{background-color:var(--text-color-2)}.btn{padding:15px 10px;font-size:1em;color:var(--text-color-2);box-shadow:0px 4px var(--key-shadow);background-color:var(--key-background)}.btn:hover{opacity:.8;background-color:var(--key-background)}.calculate.btn{box-shadow:0px 4px var(--key-shadow-r-btn);background-color:var(--key-bg-toggle)}
